tooling/nargo_cli/tests/snapshots/compile_failure/invalid_main_sub_lib/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: No module `lib` at path `src/lib.nr` or `src/lib/mod.nr`
  ┌─ src/main.nr:1:5
  │
1 │ mod lib;
  │     ---
  │

error: Could not resolve 'lib' in path
  ┌─ src/main.nr:3:12
  │
3 │ use crate::lib::foo;
  │            ---
  │

Aborting due to 2 previous errors
